force-app/main/default/objects/Email_Setting__c/Email_Setting__c.object-meta.xml
<CustomObject>
    <label>Email Setting</label>
    <nameField>
        <label>Email Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>