force-app/main/default/objects/Email_Setting__c/fields/Email_Cc__c.field-meta.xml
<CustomField>
    <fullName>Email_Cc__c</fullName>
    <label>Email Cc</label>
    <type>TextArea</type>
</CustomField>