force-app/main/default/objects/Email_Setting__c/fields/Finance_Company_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Finance_Company_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance Company Lookup</label>
    <referenceTo>Business_Associate_Master__c</referenceTo>
    <relationshipName>Finance_Emails</relationshipName>
    <type>Lookup</type>
</CustomField>