force-app/main/default/objects/Email_Setting__c/validationRules/Only_Email_Inhouse_FI.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Email_Inhouse_FI</fullName>
    <active>false</active>
    <description>Make sure the record only lookup to in-house FI</description>
    <errorConditionFormula>Finance_Company_Lookup__r.BAM_INHOUSE__c != &apos;Y&apos;
&amp;&amp; NOT( $Setup.Bypass_Automation_Settings__c.Bypass_Validation_Rules__c )</errorConditionFormula>
    <errorMessage>The email setting is only for in-house FI</errorMessage>
</ValidationRule>